--- a/HousingAssociation/HousingAssociation/HousingAssociation.csproj
+++ b/HousingAssociation/HousingAssociation/HousingAssociation.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
       <PackageReference Include="Dapper" Version="2.0.90" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.11" />
       <PackageReference Include="Npgsql" Version="6.0.0-rc.2" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
