--- a/HousingAssociation/HousingAssociation/appsettings.json
+++ b/HousingAssociation/HousingAssociation/appsettings.json
@@ -6,5 +6,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DbSettings": {
+    "DbName": "hs-db",
+    "DbHost": "localhost",
+    "DbPort": "5432",
+    "DbUser": "postgres",
+    "DbPass": "docker"
+//    "PostgresUser": "postgres",
+//    "PostgresPass": "postgres"
+  }
 }
