--- a/HousingAssociation/HousingAssociation/HousingAssociation.csproj
+++ b/HousingAssociation/HousingAssociation/HousingAssociation.csproj
@@ -7,7 +7,7 @@
     <ItemGroup>
       <PackageReference Include="EFCore.CheckConstraints" Version="5.0.1" />
       <PackageReference Include="EFCore.NamingConventions" Version="5.0.2" />
-      <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.8" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.11" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.11">
         <PrivateAssets>all</PrivateAssets>
@@ -18,23 +18,12 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Compile Remove="Models\**" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <EmbeddedResource Remove="Models\**" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <None Remove="Models\**" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Content Remove="Models\**" />
-    </ItemGroup>
-
-    <ItemGroup>
       <Folder Include="Migrations" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Include="Models\UserWall.cs" />
+      <Compile Include="Models\WorkerWall.cs" />
     </ItemGroup>
 
 </Project>
