--- a/HousingAssociation/HousingAssociation/HousingAssociation.csproj
+++ b/HousingAssociation/HousingAssociation/HousingAssociation.csproj
@@ -8,6 +8,7 @@
       <PackageReference Include="BCrypt.Net-Next" Version="4.0.2" />
       <PackageReference Include="EFCore.CheckConstraints" Version="5.0.1" />
       <PackageReference Include="EFCore.NamingConventions" Version="5.0.2" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.12" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.11" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.11">
@@ -16,10 +17,6 @@
       </PackageReference>
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Utils" />
     </ItemGroup>
 
 </Project>
